--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,6 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
+    position: relative;
+    height: 100vh;
 }
