added joinquiz page

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body{
     background-image: url("https://becode.org/wp-content/uploads/2023/01/hero-banner-e1674123702524.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom;
     height: 100vh;
     position: relative;
     height: 100vh;
