--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    height: 100vh;
+    max-height: 100vh;
     position: relative;
-    height: 100vh;
+    max-width: 100vw;
+
+    
 }
