--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ body{
     max-height: 100vh;
     position: relative;
     max-width: 100vw;
+   
 
     
 }
+::-webkit-scrollbar {
+    width: 0; 
+    height: 0; 
+  }
