--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,11 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    min-height: 100vh;
-    max-height: 100vh;
+    height: 100vh;
     position: relative;
-    max-width: 100vw;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
    
 
     
